[metadata]
name = disq
author = Ryan Brown
author-email = sb@ryansb.com
summary = Python Disque client (very very alpha, as is Disque itself)
description-file = README.md
license = ASL2.0
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords =
    disque
    disq
    redis
[files]
packages =
    disq
